# code-attention

./: LICENSE  README.md  pyproject.toml
scripts/: code_score.py
src/code_attention/: __main__.py  analyzer.py  cli.py
